--- a/public/style/style.css
+++ b/public/style/style.css
@@ -78,3 +78,11 @@ select {
     margin: 0 auto;
     padding: 0;
 }
+
+#information {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 200px;
+    height: 200px;
+}
